--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="title" content="Caroline Valenzuela Portfolio" />
     <meta
       name="description"
-      content="Created and designed for react native portfolio assignment for DIG4639C"
+      content="Caroline Valenzuela Digital Designer, UX/UI Portfolio Website"
     />
 
     <!-- Open Graph / Facebook -->
@@ -21,7 +21,7 @@
     <meta property="og:title" content="Caroline Valenzuela Portfolio" />
     <meta
       property="og:description"
-      content="Created and designed for react native portfolio assignment for DIG4639C"
+      content="Caroline Valenzuela Digital Designer, UX/UI Portfolio Website"
     />
     <meta
       property="og:image"
@@ -99,7 +99,7 @@
           <!-- Navbar links -->
           <ul class="nav-menu">
             <li><a class="nav-link" href="#projects">PROJECTS</a></li>
-            <li><a class="nav-link" href="#">EXPERIENCES</a></li>
+            <li><a class="nav-link" href="experience.html">EXPERIENCE</a></li>
             <li><a class="nav-link" href="portfolio.html">PORTFOLIO</a></li>
             <li>
               <a
@@ -153,12 +153,29 @@
       </section>
     </header>
 
+    <!--About Me -->
+    <section id="aboutMe" class="aboutMe-container">
+
+      <div class = "content-text">
+        <h2>About Me</h2>
+
+        <h4>I am a recent graduate from the University of Central Florida with a Bachelor's degree in Digital Media, specializing in web design and development. With a minor in Information
+          Technology, I am on a mission to blend design and technology to create seamless and engaging user experiences. By using Python, HTML, CSS, JavaScript, PHP, and React Native, I create
+          functional and immersive applications. With a strong foundation in user centered design, mobile development, UX/UI research, user interface design, and rapid app development, I am
+          confident my skill set will contribute to the growth of my projects as well as my team. 
+          <br> 
+          My experience of collaborating on cross-functional teams has allowed me to gain necessary skills in communcation, complex problem-solving, and effectively contribute in fast-paced
+          environments. Please explore my website to discover my different projects and learn more about who I am as a designer!
+        </h4>
+      </div>
+    </section>
+
     <!-- Projects -->
     <section id="projects" class="project-container container">
       <div class="division"></div>
       <div class="content-text">
-        <h2>Projects</h2>
-        <p>Check out some of my React Native projects! Click the button below to experience more!</p>
+        <h2>My Top Projects</h2>
+        <p>Check out some of my favorite projects! Click the button below to view all my work!</p>
       </div>
 
       <article class="project">
@@ -236,36 +253,6 @@
     <footer id="footer">
       <div class="container">
         <a href="mailto:carolinemval@gmail.com">carolinemval@gmail.com</a>
-        <!-- Social links -->
-        <div class="social">
-          <a href="#" target="_blank"
-            ><img src="./assets/facebook-icon.svg" alt="Facebook"
-          /></a>
-          <a href="#" target="_blank"><img src="./assets/twitter-icon.svg" alt="Twitter" /></a>
-          <a href="#" target="_blank"
-            ><img src="./assets/linkedin-icon.svg" alt="Linkedin"
-          /></a>
-          <a href="#" target="_blank"><img src="./assets/github-icon.svg" alt="GitHub" /></a>
-          <a href="#" target="_blank"
-            ><img src="./assets/hashnode-icon.svg" alt="Hashnode"
-          /></a>
-        </div>
-        <!-- Attribution -->
-        <div class="attribution">
-          <a
-            href="https://github.com/CommunityPro/portfolio-html"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <img
-              src="https://user-images.githubusercontent.com/62628408/157202263-9174da24-b19a-4017-9b7c-a1d26ae8f014.svg"
-              alt="attribution"
-              width="150px"
-            />
-          </a>
-        </div>
-        <p>Copyright &copy; Communitypro <span id="datee"></span>, All rights reserved</p>
-      </div>
     </footer>
     <script src="js/script.js"></script>
   </body>
