--- a/index.html
+++ b/index.html
@@ -158,15 +158,13 @@
 
       <div class = "content-text">
         <h2>About Me</h2>
-
-        <h4>I am a recent graduate from the University of Central Florida with a Bachelor's degree in Digital Media, specializing in web design and development. With a minor in Information
+        <br>
+        <h6>I am a recent graduate from the University of Central Florida with a Bachelor's degree in Digital Media, specializing in web design and development. With a minor in Information
           Technology, I am on a mission to blend design and technology to create seamless and engaging user experiences. By using Python, HTML, CSS, JavaScript, PHP, and React Native, I create
           functional and immersive applications. With a strong foundation in user centered design, mobile development, UX/UI research, user interface design, and rapid app development, I am
-          confident my skill set will contribute to the growth of my projects as well as my team. 
-          <br> 
-          My experience of collaborating on cross-functional teams has allowed me to gain necessary skills in communcation, complex problem-solving, and effectively contribute in fast-paced
-          environments. Please explore my website to discover my different projects and learn more about who I am as a designer!
-        </h4>
+          confident my skill set will contribute to the growth of my projects as well as my team. My experience of collaborating on cross-functional teams has allowed me to gain necessary skills 
+          in communcation, complex problem-solving, and effectively contribute in fast-paced environments. Please explore my website to discover my different projects and learn more about who I am as a designer!
+        </h6>
       </div>
     </section>
 
@@ -246,7 +244,7 @@
       </article>
 
       <a href="portfolio.html" class="btn btn-secondary"
-        target="_blank" >Learn More <i class="fas fa-arrow-right"></i
+        target="_blank" >View All <i class="fas fa-arrow-right"></i
       ></a>
     </section>
 
