--- a/index.html
+++ b/index.html
@@ -155,16 +155,17 @@
 
     <!--About Me -->
     <section id="aboutMe" class="aboutMe-container">
-
-      <div class = "content-text">
-        <h2>About Me</h2>
-        <br>
-        <p>I am a recent graduate from the University of Central Florida with a Bachelor's degree in Digital Media, specializing in web design and development. With a minor in Information
-          Technology, I am on a mission to blend design and technology to create seamless and engaging user experiences. By using Python, HTML, CSS, JavaScript, PHP, and React Native, I create
-          functional and immersive applications. With a strong foundation in user centered design, mobile development, UX/UI research, user interface design, and rapid app development, I am
-          confident my skill set will contribute to the growth of my projects as well as my team. My experience of collaborating on cross-functional teams has allowed me to gain necessary skills 
-          in communcation, complex problem-solving, and effectively contribute in fast-paced environments. Please explore my website to discover my different projects and learn more about who I am as a designer!
-        </p>
+      <div class="rectangle">
+        <div class = "content-text">
+          <h2>About Me</h2>
+          <br>
+          <p>I am a recent graduate from the University of Central Florida with a Bachelor's degree in Digital Media, specializing in web design and development. With a minor in Information
+            Technology, I am on a mission to blend design and technology to create seamless and engaging user experiences. By using Python, HTML, CSS, JavaScript, PHP, and React Native, I create
+            functional and immersive applications. With a strong foundation in user centered design, mobile development, UX/UI research, user interface design, and rapid app development, I am
+            confident my skill set will contribute to the growth of my projects as well as my team. My experience of collaborating on cross-functional teams has allowed me to gain necessary skills 
+            in communcation, complex problem-solving, and effectively contribute in fast-paced environments. Please explore my website to discover my different projects and learn more about who I am as a designer!
+          </p>
+        </div>
       </div>
     </section>
 
