--- a/portfolio.html
+++ b/portfolio.html
@@ -29,13 +29,13 @@
                 </h1>
                 <!-- Navbar links -->
                 <ul class="nav-menu">
-                  <li><a class="nav-link" href="index.html">PROJECTS</a></li>
-                  <li><a class="nav-link" href="#">EXPERIENCES</a></li>
+                  <li><a class="nav-link" href="projects.html">PROJECTS</a></li>
+                  <li><a class="nav-link" href="experience.html">EXPERIENCE</a></li>
                   <li><a class="nav-link" href="portfolio.html">PORTFOLIO</a></li>
                   <li>
                     <a
                       class="nav-link btn btn-primary"
-                      href="https://drive.google.com/file/d/1bjWCtlshbLaT3-j-Xpwc5gfocpynedTP/view?usp=sharingl"
+                      href="https://drive.google.com/file/d/1mxDj0Ky802-w0WWf_zATw_E4_sM2zyQb/view?usp=sharing"
                       >RESUME <i class="fas fa-arrow-right"></i
                     ></a>
                   </li>
@@ -68,11 +68,7 @@
         
                 <div class="content-text">
                   <h2>Learn about and view</h2>
-                  <h2>my React projects and designs.</h2>
-        
-                  <p>
-                    Created for DIG 4639C - Mobile Development
-                  </p>
+                  <h2>my projects and designs.</h2>
                 </div>
               </section>
         </header>
