--- a/portfolio.html
+++ b/portfolio.html
@@ -31,6 +31,7 @@
                 <ul class="nav-menu">
                   <li><a class="nav-link" href="projects.html">PROJECTS</a></li>
                   <li><a class="nav-link" href="experience.html">EXPERIENCE</a></li>
+                  <li><a class="nav-link" href="skills.html">SKILLS</a></li>
                   <li><a class="nav-link" href="portfolio.html">PORTFOLIO</a></li>
                   <li>
                     <a
