--- a/skills.html
+++ b/skills.html
@@ -68,7 +68,7 @@
                 <br>
         
                 <div class="content-text">
-                  <h2>Learn about my professional experience. </h2>
+                  <h2>Learn about my skill set with these fun easy to reac charts! </h2>
                 </div>
               </section>
         </header>
