--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </h1>
           <!-- Navbar links -->
           <ul class="nav-menu">
-            <li><a class="nav-link" href="projects.html">PROJECTS</a></li>
+            <li><a class="nav-link" href="#projects">PROJECTS</a></li>
             <li><a class="nav-link" href="experience.html">EXPERIENCE</a></li>
             <li><a class="nav-link" href="skills.html">SKILLS</a></li>
             <li><a class="nav-link" href="portfolio.html">PORTFOLIO</a></li>
