--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
     <section id="projects" class="project-container container">
       <div class="division"></div>
       <div class="content-text">
-        <h2>My Top Projects</h2>
-        <p>Check out some of my favorite projects! Click the button below to view all my work!</p>
+        <h2></h2>Projects</h2>
+        <p>Check out some of my favorite UI/UX projects! Click the button below to view all my work!</p>
       </div>
 
       <article class="project">
@@ -165,8 +165,8 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>React Menu</h3>
-              <p>Interactive menu that adds items into your cart</p>
+              <h3>Bump Bites</h3>
+              <p>Figma, HTML, CSS, JavaScript, PHP</p>
             </div>
             </div>
           </div>
@@ -177,7 +177,7 @@
           <div class="project-info">
             <div class="project-bio">
               <h3>Exercise Tracker App</h3>
-              <p>Track your time and amount of reps for 4 different exercises</p>
+              <p>React, JavaScript, CSS</p>
             </div>
           </div>
         </div>
@@ -186,8 +186,8 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Object Oriented List</h3>
-              <p>Create a list that allows you to add items and updates</p>
+              <h3>Chat GPT User Metrics</h3>
+              <p>Figma</p>
             </div>
             </div>
           </div>
@@ -197,8 +197,8 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Quiz App</h3>
-              <p>Interactive quiz with multiple types of questions. Reports your score.</p>
+              <h3>Little Us</h3>
+              <p>Figma, WordPress, HTML, CSS, JavaScript</p>
             </div>
           </div>
         </div>
@@ -207,8 +207,8 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>TODO App Design</h3>
-              <p>HiFi TODO App to create and manage tasks, set deadlines, and mark completion. </p>
+              <h3>Flash Study</h3>
+              <p>Figma</p>
             </div>
             </div>
           </div>
@@ -218,8 +218,8 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Exercise App Design</h3>
-              <p>HiFi App to track fitness for different exercises.</p>
+              <h3>SPARK!</h3>
+              <p>Figma</p>
             </div>
             </div>
           </div>
