--- a/skills.html
+++ b/skills.html
@@ -29,7 +29,6 @@
                 </h1>
                 <!-- Navbar links -->
                 <ul class="nav-menu">
-                  <li><a class="nav-link" href="#projects">PROJECTS</a></li>
                   <li><a class="nav-link" href="experience.html">EXPERIENCE</a></li>
                   <li><a class="nav-link" href="skills.html">SKILLS</a></li>
                   <li><a class="nav-link" href="portfolio.html">PORTFOLIO</a></li>
@@ -72,4 +71,11 @@
                 </div>
               </section>
         </header>
+
+        <footer id="footer">
+          <div class="container">
+            <a href="mailto:carolinemval@gmail.com">carolinemval@gmail.com</a>
+        </footer>
+        <script src="js/script.js"></script>
     </body>
+</html>
