--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <section id="projects" class="project-container container">
       <div class="division"></div>
       <div class="content-text">
-        <h2></h2>Projects</h2>
+        <h2>Projects</h2>
         <p>Check out some of my favorite UI/UX projects! Click the button below to view all my work!</p>
       </div>
 
