--- a/portfolio.html
+++ b/portfolio.html
@@ -67,8 +67,7 @@
                 <br>
         
                 <div class="content-text">
-                  <h2>Learn about and view</h2>
-                  <h2>my projects and designs.</h2>
+                  <h2>Portfolio</h2>
                 </div>
               </section>
         </header>
