updated skill bars and images

--- a/experience.html
+++ b/experience.html
@@ -58,20 +58,13 @@
               </div>
             </nav>
 
-            <section class="header-container">
-                <img
-                  class="profile-image"
-                  src="assets/react.png"
-                  alt="Caroline Valenzuela"
-                />
-                <br>
-        
                 <div class="content-text">
-                  <h2>Learn about my professional experience. </h2>
+                  <h2>Professional Experience</h2>
+                  <p>A timeline of my professional work experience as a digital designer.</p>
                 </div>
               </section>
         </header>
-        
+
         <footer id="footer">
           <div class="container">
             <a href="mailto:carolinemval@gmail.com">carolinemval@gmail.com</a>
