--- a/portfolio.html
+++ b/portfolio.html
@@ -59,15 +59,9 @@
             </nav>
 
             <section class="header-container">
-                <img
-                  class="profile-image"
-                  src="assets/react.png"
-                  alt="Caroline Valenzuela"
-                />
-                <br>
-        
                 <div class="content-text">
                   <h2>Portfolio</h2>
+                  <p>A collection of my digital work.</p>
                 </div>
               </section>
         </header>
@@ -82,7 +76,7 @@
                     the apps functionality and simplicity. This application has minimal design to focus on array functionality.</p>
             </div>
             <div class="image-column">
-                <img src="assets/project/menupic.png" alt="React Menu App Image">
+                <img src="assets/project/menupic.png" alt="Bump Bites Project Card">
             </div>
         </section>
 
@@ -112,7 +106,7 @@
                 </p>
             </div>
             <div class="image-column">
-                <img src="assets/project/oolist.png" alt="Object Oriented List Image">
+                <img src="assets/project/oolist.png" alt="Chat GPT User Metrics Card">
             </div>
         </section>
 
@@ -126,7 +120,7 @@
                     see the quiz app in action!
             </div>
             <div class="image-column">
-                <img src="assets/number4.gif" alt="Quiz App GIF">
+                <img src="assets/number4.gif" alt="Little Us Card">
             </div>
         </section>
 
@@ -140,7 +134,7 @@
                     This app will soon be transformed into a fully functioning React application. Preview the GIF to see the design! </p>
             </div>
             <div class="image-column">
-                <img src="assets/number5.gif" alt="TODO App Design GIF">
+                <img src="assets/number5.gif" alt="Flash Study Card">
             </div>
         </section>
 
@@ -156,7 +150,7 @@
                 </p>
             </div>
             <div class="image-column">
-                <img src="assets/number6.gif" alt="Exerise App Design GIF">
+                <img src="assets/number6.gif" alt="SPARK Card">
             </div>
         </section> 
 
