--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       property="og:url"
       content="https://github.com/CommunityPro/portfolio-html"
     />
-    <meta property="og:title" content="Caroline Valenzuela Portfolio" />
+    <meta property="og:title" content="Caroline Valenzuela Official" />
     <meta
       property="og:description"
       content="Caroline Valenzuela Digital Designer, UX/UI Portfolio Website"
@@ -218,7 +218,7 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>SPARK!</h3>
+              <h3>SPARK</h3>
               <p>Figma</p>
             </div>
             </div>
