updated skill bars

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,22 +69,22 @@
         <!--Project 1-->
         <section class="two-column-container">
             <div class="text-column">
-                <h2>Menu App</h2>
-                <h3>React, JS</h3>
+                <h2>Bump Bites</h2>
+                <h3>UI/UX Design, Complete Front and Back-end development</h3>
                 <p>The Menu App, created with React, is a date driven digital menu experience with sections for appetizers, 
                     main courses, and desserts. This app is a simple platform, structured from a JSON data source, that has users explore different food options.View the GIF to preview
                     the apps functionality and simplicity. This application has minimal design to focus on array functionality.</p>
             </div>
             <div class="image-column">
-                <img src="assets/project/menupic.png" alt="Bump Bites Project Card">
+                <img src="assets/project/bumpCart.png" alt="Bump Bites Project Card">
             </div>
         </section>
 
         <!--Project 2-->
         <section class="two-column-container">
             <div class="text-column">
-                <h2>Exercise Tracker App</h2>
-                <h3>React, JS, CSS</h3>
+                <h2>React Exercise Tracker App</h2>
+                <h3>UI/UX Design, React.js</h3>
                 <p>This exercise app features a home screen that leads to a exercise menu selection. With a variety of exercises
                     users can monitor their workout routine. With a stopwatch feature and rep counter, this is a perfect fitness companion.
                     Using a very user intuitve interface, users are encouraged to exercise and record their fitness journey. Thorugh the
@@ -99,50 +99,50 @@
         <!--Project 3-->
         <section class="two-column-container">
             <div class="text-column">
-                <h2>Object Oriented List</h2>
-                <h3>React, JS, CSS</h3>
+                <h2>Chat GPT User Metrics Front-End Design</h2>
+                <h3>UI/UX Design</h3>
                 <p>This is a very simple application that allows the user to add items into a list. After adding to the list, the user can use the filter search to pull up results
                     that fit. The simplicity of this application teaches how to create and update lists in React. While the GIF does not work, you can explore the Git Repo.
                 </p>
             </div>
             <div class="image-column">
-                <img src="assets/project/oolist.png" alt="Chat GPT User Metrics Card">
+                <img src="assets/project/ChatGPTCard.png" alt="Chat GPT User Metrics Card">
             </div>
         </section>
 
         <!--Project 4-->
         <section class="two-column-container">
             <div class="text-column">
-                <h2>Quiz App</h2>
-                <h3>React, JS, CSS</h3>
+                <h2>Little Us WordPress Site Development</h2>
+                <h3>UI/UX Design, WordPress</h3>
                 <p>The quz app, created with React, is an interactve quiz. With a variety of different questions including true or false, multiple-choice, and open-ended questions,
                     the users score is then calculated and presented at the end of the quiz. Assigning point values for each correct question led to a few complications. View the GIF to
                     see the quiz app in action!
             </div>
             <div class="image-column">
-                <img src="assets/number4.gif" alt="Little Us Card">
+                <img src="assets/project/littleUsCard.png" alt="Little Us Card">
             </div>
         </section>
 
         <!--Project 5-->
         <section class="two-column-container">
             <div class="text-column">
-                <h2>TODO App Design</h2>
-                <h3>Figma</h3>
+                <h2>Flash Study Front-End Design</h2>
+                <h3>UI/UX Design</h3>
                 <p>The TODO app design allows users to create an account. After creating an account, users can create tasks, manage them in a list, set deadlines,
                     and mark when the task is completed. They can navigate through the application using the navigation bar at the bottom of the screen.
                     This app will soon be transformed into a fully functioning React application. Preview the GIF to see the design! </p>
             </div>
             <div class="image-column">
-                <img src="assets/number5.gif" alt="Flash Study Card">
+                <img src="assets/project/flashStudyCard.png" alt="Flash Study Card">
             </div>
         </section>
 
         <!--Project 6-->
         <section class="two-column-container">
             <div class="text-column">
-                <h2>Exercise App Design</h2>
-                <h3>Figma</h3>
+                <h2>SPARK Front-End Design</h2>
+                <h3>UI/UX Design</h3>
                 <p>This high fidelity design was created to track the users fitness activity for a variety of different exercises.
                     The app includes intutive features including setting your exercise duration, rest period, and record the users distace on a map. 
                     With the option to flip timers to count up or down, this was designed with the users preference in mind. Finally, this design also tracks
@@ -150,7 +150,7 @@
                 </p>
             </div>
             <div class="image-column">
-                <img src="assets/number6.gif" alt="SPARK Card">
+                <img src="assets/project/sparkCard.png" alt="SPARK Card">
             </div>
         </section> 
 
