--- a/experience.html
+++ b/experience.html
@@ -58,12 +58,15 @@
               </div>
             </nav>
 
+            <section>
                 <div class="content-text">
                   <h2>Professional Experience</h2>
                   <p>A timeline of my professional work experience as a digital designer.</p>
                 </div>
               </section>
         </header>
+        <br>
+        
 
         <footer id="footer">
           <div class="container">
