--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
             <section class="header-container">
                 <div class="content-text">
                   <h2>Portfolio</h2>
-                  <p>A collection of my digital work.</p>
+                  <h4>A collection of my digital work.</h4>
                 </div>
               </section>
         </header>
@@ -70,7 +70,7 @@
         <section class="two-column-container">
             <div class="text-column">
                 <h2>Bump Bites</h2>
-                <h3>UI/UX Design, Complete Front and Back-end development</h3>
+                <h3>UI/UX Design, Front and Back-end development</h3>
                 <p>The Menu App, created with React, is a date driven digital menu experience with sections for appetizers, 
                     main courses, and desserts. This app is a simple platform, structured from a JSON data source, that has users explore different food options.View the GIF to preview
                     the apps functionality and simplicity. This application has minimal design to focus on array functionality.</p>
@@ -83,7 +83,7 @@
         <!--Project 2-->
         <section class="two-column-container">
             <div class="text-column">
-                <h2>React Exercise Tracker App</h2>
+                <h2>Exercise Tracker App</h2>
                 <h3>UI/UX Design, React.js</h3>
                 <p>This exercise app features a home screen that leads to a exercise menu selection. With a variety of exercises
                     users can monitor their workout routine. With a stopwatch feature and rep counter, this is a perfect fitness companion.
@@ -99,7 +99,7 @@
         <!--Project 3-->
         <section class="two-column-container">
             <div class="text-column">
-                <h2>Chat GPT User Metrics Front-End Design</h2>
+                <h2>Chat GPT User Metrics</h2>
                 <h3>UI/UX Design</h3>
                 <p>This is a very simple application that allows the user to add items into a list. After adding to the list, the user can use the filter search to pull up results
                     that fit. The simplicity of this application teaches how to create and update lists in React. While the GIF does not work, you can explore the Git Repo.
@@ -127,7 +127,7 @@
         <!--Project 5-->
         <section class="two-column-container">
             <div class="text-column">
-                <h2>Flash Study Front-End Design</h2>
+                <h2>Flash Study</h2>
                 <h3>UI/UX Design</h3>
                 <p>The TODO app design allows users to create an account. After creating an account, users can create tasks, manage them in a list, set deadlines,
                     and mark when the task is completed. They can navigate through the application using the navigation bar at the bottom of the screen.
@@ -141,7 +141,7 @@
         <!--Project 6-->
         <section class="two-column-container">
             <div class="text-column">
-                <h2>SPARK Front-End Design</h2>
+                <h2>SPARK</h2>
                 <h3>UI/UX Design</h3>
                 <p>This high fidelity design was created to track the users fitness activity for a variety of different exercises.
                     The app includes intutive features including setting your exercise duration, rest period, and record the users distace on a map. 
@@ -151,6 +151,22 @@
             </div>
             <div class="image-column">
                 <img src="assets/project/sparkCard.png" alt="SPARK Card">
+            </div>
+        </section>
+
+        <!--Project 7-->
+        <section class="two-column-container">
+            <div class="text-column">
+                <h2>Corey Rieman and The Dilemma Band</h2>
+                <h3>Logo Design</h3>
+                <p>This high fidelity design was created to track the users fitness activity for a variety of different exercises.
+                    The app includes intutive features including setting your exercise duration, rest period, and record the users distace on a map. 
+                    With the option to flip timers to count up or down, this was designed with the users preference in mind. Finally, this design also tracks
+                    the users heart rate for each activity. View the GIF to see more!
+                </p>
+            </div>
+            <div class="image-column">
+                <img src="assets/project/corey.jpg" alt="Corey Rieman and The Dilemma Band Logo">
             </div>
         </section> 
 
