--- a/skills.html
+++ b/skills.html
@@ -61,7 +61,7 @@
             <section class="header-container">
                 <div class="content-text">
                   <h2>Skills</h2>
-                  <p>Learn about my skill set!</p>
+                  <h4>Learn about what skills I can contribute to your team!</h4>
                 </div>
               </section>
         </header>
@@ -110,7 +110,18 @@
             </ul>
           </div>
         </div>
-
+        <br>
+        <!--Soft Skills-->
+        <div class = "softSkills">
+          <h3>Soft Skills</h3>
+          <ul class="softList">
+            <li class = "skillsListItem button buttonDesign">Adaptive</li>
+            <li class = "skillsListItem button buttonDesign">Curiosity</li>
+            <li class = "skillsListItem button buttonDesign">Attention to detail</li>
+            <li class = "skillsListItem button buttonDesign">Adaptive</li>
+            <li class = "skillsListItem button buttonDesign">Adaptive</li>
+          </ul>
+        </div>
         <footer id="footer">
           <div class="container">
             <a href="mailto:carolinemval@gmail.com">carolinemval@gmail.com</a>
