updated skills and projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -71,9 +71,11 @@
             <div class="text-column">
                 <h2>Bump Bites</h2>
                 <h3>UI/UX Design, Front and Back-end development</h3>
-                <p>The Menu App, created with React, is a date driven digital menu experience with sections for appetizers, 
-                    main courses, and desserts. This app is a simple platform, structured from a JSON data source, that has users explore different food options.View the GIF to preview
-                    the apps functionality and simplicity. This application has minimal design to focus on array functionality.</p>
+                <p>Over the course of 2 semesters, my senior design capstone team and I created Bump Bites, a website for a pregnancy snack craving subscription box. The production of this project includes a
+                  Statement of Work, Strategy Guide, Style Sheet, Wireframes, Lofi and HiFi prototypes, Use Cases, Content Inventory, Testing Plan, and Tetsing Mitigation. My team and I successfuly developed and
+                  deployed our site. My roles on this team included designing the information architecture, creating the function hiFi protoype, and helping to code both the front and backend.
+                  View the complete site using the link.
+                </p>
             </div>
             <div class="image-column">
                 <img src="assets/project/bumpCart.png" alt="Bump Bites Project Card">
@@ -86,8 +88,8 @@
                 <h2>Exercise Tracker App</h2>
                 <h3>UI/UX Design, React.js</h3>
                 <p>This exercise app features a home screen that leads to a exercise menu selection. With a variety of exercises
-                    users can monitor their workout routine. With a stopwatch feature and rep counter, this is a perfect fitness companion.
-                    Using a very user intuitve interface, users are encouraged to exercise and record their fitness journey. Thorugh the
+                    users can monitor their workout exercises. This app includes a stopwatch feature and rep counter, making it a perfect fitness companion.
+                    With a simple and intuitve interface, users are encouraged to exercise and record their fitness journey. Thorugh the
                     use of React Native framework is a simple and efficient application. View the GIF to preview its functionality.
                 </p>
             </div>
@@ -101,8 +103,10 @@
             <div class="text-column">
                 <h2>Chat GPT User Metrics</h2>
                 <h3>UI/UX Design</h3>
-                <p>This is a very simple application that allows the user to add items into a list. After adding to the list, the user can use the filter search to pull up results
-                    that fit. The simplicity of this application teaches how to create and update lists in React. While the GIF does not work, you can explore the Git Repo.
+                <p>I developed 6 different user metrics to track user data while using Chat GPT. This high-fidelity protype was designed in part of a 24-hour assessment. The user metrics
+                  are unique and provide the user interesting insight on how they use the chatbot compared to other users. The user metrics include calculating the comlexity of the questions asked,
+                  how personalized your conersation becomes, and rates how obscure your conversations are compared to other users. Additonally, I redesigned the functionality of the home page to 
+                  include folders and filters to sort previous conversations. Use the link to preview the hifi prototype.
                 </p>
             </div>
             <div class="image-column">
@@ -115,9 +119,10 @@
             <div class="text-column">
                 <h2>Little Us WordPress Site Development</h2>
                 <h3>UI/UX Design, WordPress</h3>
-                <p>The quz app, created with React, is an interactve quiz. With a variety of different questions including true or false, multiple-choice, and open-ended questions,
-                    the users score is then calculated and presented at the end of the quiz. Assigning point values for each correct question led to a few complications. View the GIF to
-                    see the quiz app in action!
+                <p>This high-fidelity website is designed specifically for the up and coming rock band Little Us. Little Us website information had not been updated since 2019, runs incredibly slow, and has an outdated theme. Since their website
+                  was previously designed on WordPress, I optimized the layout and infromation architecture of the site. Additionally, I implemented plugins to give more functionality and animation to the page. The website has a simple interface 
+                  with navigation to upcoming shows, music videos, and the latest released music. Additionally, the site showcases the band members, allows users to purchase merchandise, includes forms to contact the band, and a button to subscribe to their newsletter. 
+                  This website design directly reflects the band's personality and music style, which can be seen in the bold color choices against a dark background. Use the link to preview the prototype.</p>
             </div>
             <div class="image-column">
                 <img src="assets/project/littleUsCard.png" alt="Little Us Card">
@@ -129,9 +134,10 @@
             <div class="text-column">
                 <h2>Flash Study</h2>
                 <h3>UI/UX Design</h3>
-                <p>The TODO app design allows users to create an account. After creating an account, users can create tasks, manage them in a list, set deadlines,
-                    and mark when the task is completed. They can navigate through the application using the navigation bar at the bottom of the screen.
-                    This app will soon be transformed into a fully functioning React application. Preview the GIF to see the design! </p>
+                <p>I created a mid-fidelity mobile application to allow users to study flashcards. The app allows users to create, delete and study their flashcard decks. While in study mode users
+                  can favorite cards, shuffle the deck, and quickly edit the card. Additionally, I designed a simple system to sort and mark cards as part of a certain class deck. Use the link to
+                  preview my prototype.
+                </p>
             </div>
             <div class="image-column">
                 <img src="assets/project/flashStudyCard.png" alt="Flash Study Card">
@@ -143,10 +149,9 @@
             <div class="text-column">
                 <h2>SPARK</h2>
                 <h3>UI/UX Design</h3>
-                <p>This high fidelity design was created to track the users fitness activity for a variety of different exercises.
-                    The app includes intutive features including setting your exercise duration, rest period, and record the users distace on a map. 
-                    With the option to flip timers to count up or down, this was designed with the users preference in mind. Finally, this design also tracks
-                    the users heart rate for each activity. View the GIF to see more!
+                <p>I designed a photo-sharing and geosocial networking app to connect people and their pets. SPARK aims to help both people and pets go out and create new, meaningful relationships.
+                  I created wireframes and low-fidelity mobile portotypes. Likewise, using Figma I created a functional high-fidelity prototype to simulate realistic interactions. Lastly I designed 
+                  a comprehensive library of vetor components to implement in the interface. Use the link to preview the prototype.
                 </p>
             </div>
             <div class="image-column">
@@ -159,10 +164,8 @@
             <div class="text-column">
                 <h2>Corey Rieman and The Dilemma Band</h2>
                 <h3>Logo Design</h3>
-                <p>This high fidelity design was created to track the users fitness activity for a variety of different exercises.
-                    The app includes intutive features including setting your exercise duration, rest period, and record the users distace on a map. 
-                    With the option to flip timers to count up or down, this was designed with the users preference in mind. Finally, this design also tracks
-                    the users heart rate for each activity. View the GIF to see more!
+                <p>Using Procreate, I redesigned the iconic Dilemma Band Logo. This rock party fusion band located in Avon, CT plays across the Northeast at festivals, bars, and private events.
+                  The design is currently being used as the bands main logo and is being sold in new merchendise!
                 </p>
             </div>
             <div class="image-column">
