--- a/skills.html
+++ b/skills.html
@@ -117,9 +117,14 @@
           <ul class="softList">
             <li class = "skillsListItem button buttonDesign">Adaptive</li>
             <li class = "skillsListItem button buttonDesign">Curiosity</li>
-            <li class = "skillsListItem button buttonDesign">Attention to detail</li>
-            <li class = "skillsListItem button buttonDesign">Adaptive</li>
-            <li class = "skillsListItem button buttonDesign">Adaptive</li>
+            <li class = "skillsListItem button buttonDesign">Attentive to detail</li>
+            <li class = "skillsListItem button buttonDesign">Innovative</li>
+            <li class = "skillsListItem button buttonDesign">Collaborative</li>
+            <li class = "skillsListItem button buttonDesign">Time Management</li>
+            <li class = "skillsListItem button buttonDesign">Complex Problem Solver</li>
+            <li class = "skillsListItem button buttonDesign">Empathetic</li>
+            <li class = "skillsListItem button buttonDesign">Communicative</li>
+            <li class = "skillsListItem button buttonDesign">Articulate</li>
           </ul>
         </div>
         <footer id="footer">
