--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
         <section class="two-column-container">
             <div class="text-column">
                 <h2>Bump Bites</h2>
-                <h3>UI/UX Design, Front and Back-end development</h3>
+                <h3>UI/UX Design, Front & Back-end Development</h3>
                 <p>Over the course of 2 semesters, my senior design capstone team and I created Bump Bites, a website for a pregnancy snack craving subscription box. The production of this project includes a
                   Statement of Work, Strategy Guide, Style Sheet, Wireframes, Lofi and HiFi prototypes, Use Cases, Content Inventory, Testing Plan, and Tetsing Mitigation. My team and I successfuly developed and
                   deployed our site. My roles on this team included designing the information architecture, creating the function hiFi protoype, and helping to code both the front and backend.
